# broccli

./: Cargo.toml  README.md
broccolor/: Cargo.toml  README.md
broccolor/src/: colorizing.rs  colors.rs  conversion.rs  lib.rs
brocproc/: Cargo.toml
brocproc/src/: lib.rs  parse.rs  xformat.rs
src/: colors.rs  errors.rs  interface.rs  lib.rs  macros.rs  main.rs  terminal.rs  widgets.rs
