[package]
name = "broccli"
version = "0.0.12"
edition = "2021"
authors = ["Ali Aghaahmadi <itsaliaghaahmadi@gmail.com>"]
description = "A library for working with command-line interfaces"
license = "MIT OR Apache-2.0"
keywords = ["cli", "tui", "rust"]
categories = ["development-tools", "command-line-interface"]

[features]
default = ["xprint"]
wasm = ["dep:wasm-bindgen"]
xprint = []


[dependencies]
libc = "0.2.169"
broccolor = { version = "0.0.1", path = "broccolor" }
brocproc = { version = "0.0.1", path = "brocproc" }
wasm-bindgen = { version = "0.2.100", optional = true }